2002-02-22  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/cml.cpp: New CML support, including built-in XML parser,
	contributed by Peter Murray-Rust.

	* src/Makefile.in: Add cml.cpp to list to support CML compilation.

	* src/data.h, src/data.cpp: Add CML file type.

	* src/extable.txt, src/extable.h: Update to add in .cml files.

	* src.fileformat.cpp, src/fileformat.h: Add in support for CML
	read/write as well as passing options to WriteMolecule methods.

	* src/main.cpp: Add support for passing output options (currently
	only XML/CML) to export methods.
	
	* src/aromatic.txt: Enable support for recognizing Se in aromatic
	rings. (Uncommon, but I've been doing work with selenophene
	recently.)

	* src/pdb.cpp (ParseConectRecord): Fix bugs in CONECT records with
	PDB files. Would only read first 4 columns and wouldn't handle
	multiple bonds. Fixes PR #529744. Use PerceiveBondOrders() when
	using ConnectTheDots() for missing bonds.
	
	* src/ghemical.cpp: Add error checking for reading bonds. Don't
	assume the # of bonds given in the header is correct.

	* src/mol.cpp: Check to see if a bond exists before adding
	it. (Prevents a bond addition (a,b) followed by (b,a).)

2002-02-22  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/Makefile.in: Add viewmol.o.

	* src/viewmol.cpp: New code to read/write ViewMol files as ported
	from the GPL'ed patch sent by J?rg-R?diger Hill.

	* src/data.h, src/data.cpp, src/extable.txt, src/extable.h: Add
	ViewMol format and enable Chem3D and derived formats.

	* src/c3d.cpp: Clean up Read methods to match normal declarations.

	* src/fileformat.h, src/fileformat.cpp: Enable Read/Write for
	Chem3d1, Chem3d2, Mmads and ViewMol formats.

	* src/main.cpp: Add support for using '--' to read from STDIN and
	output to STDOUT. Tackles request #519085.
	
2002-02-17  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* README, configure.in, configure: Update for next snapshot of
	1.99.1.
